--- a/css/menu.scss
+++ b/css/menu.scss
@@ -70,6 +70,7 @@ nav {
     margin: 0 auto;
     a {
         text-decoration: none;
+        color:black;
     }
     h1{
         text-align: center;
@@ -167,6 +168,38 @@ main {
             height: 70px;
             box-sizing: border-box;
             cursor: pointer;
+            -webkit-animation: slide-in-bottom 1s ease-in-out ;
+            animation: slide-in-bottom 1s ease-in-out ;
+            /* ----------------------------------------------
+            /**
+            * ----------------------------------------
+            * animation slide-in-bottom
+            * ----------------------------------------
+            */
+            @-webkit-keyframes slide-in-bottom {
+                0% {
+                -webkit-transform: translateY(20px);
+                        transform: translateY(20px);
+                opacity: 0;
+                }
+                100% {
+                -webkit-transform: translateY(0);
+                        transform: translateY(0);
+                opacity: 1;
+                }
+            }
+            @keyframes slide-in-bottom {
+                0% {
+                -webkit-transform: translateY(20px);
+                        transform: translateY(20px);
+                opacity: 0;
+                }
+                100% {
+                -webkit-transform: translateY(0);
+                        transform: translateY(0);
+                opacity: 1;
+                }
+            }
             .list-plate__desc{
                 display: flex;
                 justify-content: space-between;
@@ -199,7 +232,7 @@ main {
                 display: flex;
                 align-items:flex-end;
                 font-weight: 600;
-                padding-right: 10px;
+                padding-right: 15px;
                 
             }
             .add-cart {
