--- a/css/menu.scss
+++ b/css/menu.scss
@@ -295,6 +295,10 @@ footer {
     background-color: rgb(39, 32, 32);
     color:white;
     margin: auto;
+    a{
+        color:white;
+        text-decoration: none;
+    }
     p, ul {
         width: 80%;
         margin: auto;
