--- a/css/style.scss
+++ b/css/style.scss
@@ -210,8 +210,9 @@ ol {
 .restaurant {
     background-color:  $back-grey;
     @include flexbox-column();
-    gap: 10px;
     padding-bottom: 40px;
+    justify-content: space-evenly;
+    row-gap: 30px;
     .top-right{
         position:absolute;
         top:15px;
@@ -222,12 +223,18 @@ ol {
         font-size: 16px;
         z-index: 2;
     }
-    figure, h2 {
-        width:90%;
+    h2 {
         margin: 15px auto auto auto;
+    }
+    a, h2 {
+        width:90%; 
     } 
+    a{
+        text-decoration: none;
+        color:rgb(43, 43, 43);
+        margin: 0 auto;
+    }
     figure{
-       //cursor: pointer;
        position: relative;
        z-index: 1;
        border: 4px solid white;
@@ -235,10 +242,7 @@ ol {
        border-radius: 15px;
        background-color: white;
        cursor: pointer;
-       a{
-        text-decoration: none;
-        color:rgb(43, 43, 43);
-       }
+       margin: 0 auto;
     }
     img {
         height: 130px;
@@ -251,7 +255,6 @@ ol {
         margin-bottom: 0;
         font-family:$second_font;
         color:black;
-
     }
     p{
         margin:8px 0;
@@ -311,6 +314,10 @@ footer {
         background-color: rgb(39, 32, 32);
         color:white;
         margin: auto;
+        a{
+            color:white;
+            text-decoration: none;
+        }
         p, ul {
             width: 80%;
             margin: auto;
@@ -350,8 +357,8 @@ footer {
                 margin-left: 40px;
                 width:100%;
             }
-            figure {
-                width:45%;
+            a {
+                width: 45%;
                 img {
                     height: 170px;
                 }
@@ -380,7 +387,7 @@ footer {
                 margin-left: 40px;
                 width:100%;
             }
-            figure {
+            a {
                 width:45%;
                 img {
                     height: 200px;
