Modifications pour soutenance
Ajustement des tailles de texte, margin/padding, icone, retirer le nav sur index

--- a/css/menu.css
+++ b/css/menu.css
@@ -117,7 +117,7 @@ main .titre .remplir-hover:hover {
 }
 main section {
   margin: 0 auto;
-  width: 90%;
+  width: 93%;
   display: flex;
   flex-direction: column;
   row-gap: 20px;
@@ -127,7 +127,7 @@ main section .soulign {
   padding-bottom: 4px;
 }
 main section .list-plate {
-  padding-left: 10px;
+  padding-left: 7px;
   display: flex;
   justify-content: space-between;
   background-color: white;
@@ -166,19 +166,19 @@ main section .list-plate .list-plate__titre {
   flex-direction: column;
   justify-content: space-evenly;
   overflow: hidden;
-  padding: 10px;
+  padding: 5px 0px;
 }
 main section .list-plate .list-plate__titre p {
   max-width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 0.93rem;
+  font-size: 0.7rem;
   font-weight: 300;
   margin: 0;
 }
 main section .list-plate .list-plate__titre .titre-plat {
-  font-size: 1.15em;
+  font-size: 1.05em;
   font-weight: 600;
   margin: 0;
 }
@@ -186,7 +186,7 @@ main section .list-plate .price {
   display: flex;
   align-items: flex-end;
   font-weight: 600;
-  padding-right: 15px;
+  padding-right: 7px;
 }
 main section .list-plate .add-cart {
   width: 0;
@@ -241,6 +241,9 @@ footer {
   color: white;
   margin: auto;
 }
+footer i {
+  width: 1.2em;
+}
 footer a {
   color: white;
   text-decoration: none;
@@ -274,6 +277,9 @@ footer ul {
   main section .list-plate {
     width: 48%;
   }
+  main section .list-plate .list-plate__titre p {
+    font-size: 0.83em;
+  }
   main section h3 {
     width: 100%;
   }
@@ -302,6 +308,9 @@ footer ul {
   }
   main section .list-plate {
     width: 30%;
+  }
+  main section .list-plate .list-plate__titre p {
+    font-size: 0.86em;
   }
   main section h3 {
     width: 100%;
