--- a/css/style.scss
+++ b/css/style.scss
@@ -84,7 +84,7 @@ body{
     width: 100%;
     margin: 0 auto
 }
-h1,h2 {
+h1 {
     font-family: $main_font;
     font-size: 1.40em;
 }
@@ -104,7 +104,7 @@ header, .presentation {
     text-align: center;
     margin: 0 auto;
 }
-nav{
+titre-larg-max{
     width: 100%;
     background-color: white;
     box-shadow: 5px 5px 5px #e8e8e8, -5px 5px 5px #e8e8e8;
@@ -170,7 +170,7 @@ ol {
     counter-reset: compteListe;
     padding-inline-start: 0px;
     li {
-        text-align: center;
+        text-align: left;
         box-shadow: 5px 5px 5px #e8e8e8, -5px 5px 5px #e8e8e8;
         padding: 20px 15px;
         margin-bottom: 15px;
@@ -194,13 +194,14 @@ ol {
         padding: 2px 8px;
     
     }
-    li:hover{
+    .important{
         background-color: #f5edff;
         i {
-            color:$primary_color;
+            color:$primary_color !important;
         }
     }
     i {
+        margin-left: 30px;
         margin-right: 15px;
         color:grey;
     }
@@ -314,6 +315,9 @@ footer {
         background-color: rgb(39, 32, 32);
         color:white;
         margin: auto;
+        i{
+            width: 1.2em;
+        }
         a{
             color:white;
             text-decoration: none;
@@ -344,11 +348,15 @@ footer {
             justify-content: center;
             align-items: center;
             li {
-                width:25%;
                 box-sizing: border-box;
             }
             li::before {
                 top:30%;
+            }
+            i {
+                margin-left: 14px;
+                margin-right: 15px;
+                color:grey;
             }
         }
         .restaurant{
@@ -379,6 +387,11 @@ footer {
             justify-content: center;
             li {
                 width:25%;
+            }
+            i {
+                margin-left: 14px;
+                margin-right: 15px;
+                color:grey;
             }
         }
         .restaurant{
